force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/VN_GerenciadorMetaParticipanteAF__c.object-meta.xml
<CustomObject>
    <description>Gerenciador dos registros de metas dos participantes por Ano Fiscal.</description>
    <label>Gerenciador Meta Participante AF</label>
    <nameField>
        <displayFormat>GMAF-{000000}</displayFormat>
        <label>No. Gerenciador Ano Fiscal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gerenciador Metas Participantes AF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>