force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <description>Registrar a nomenclatura do ano fiscal desejado. Exemplo: AF19</description>
    <inlineHelpText>Registrar a nomenclatura do ano fiscal desejado. Exemplo: AF19</inlineHelpText>
    <label>Ano Fiscal</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>