force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_CriarAnoFiscalParticipantes__c.field-meta.xml
<CustomField>
    <fullName>V_CriarAnoFiscalParticipantes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que servirá de gatilho para a criação de registros do Ano Fiscal para os participantes.</description>
    <inlineHelpText>Campo que servirá de gatilho para a criação de registros do Ano Fiscal para os participantes.</inlineHelpText>
    <label>Criar Ano Fiscal para os Participantes</label>
    <type>Checkbox</type>
</CustomField>