force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_DataFim__c.field-meta.xml
<CustomField>
    <fullName>V_DataFim__c</fullName>
    <description>Data final do ano fiscal.</description>
    <inlineHelpText>Data final do ano fiscal.</inlineHelpText>
    <label>Data Fim</label>
    <required>true</required>
    <type>Date</type>
</CustomField>