force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_DataInicio__c.field-meta.xml
<CustomField>
    <fullName>V_DataInicio__c</fullName>
    <description>Data de início do ano fiscal.</description>
    <inlineHelpText>Data de início do ano fiscal.</inlineHelpText>
    <label>Data Início</label>
    <required>true</required>
    <type>Date</type>
</CustomField>