force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_PeriodoAF__c.field-meta.xml
<CustomField>
    <fullName>V_PeriodoAF__c</fullName>
    <description>Registrar o período do ano fiscal desejado. Exemplo: 2018-2019</description>
    <inlineHelpText>Registrar o período do ano fiscal desejado. Exemplo: 2018-2019</inlineHelpText>
    <label>Período AF</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>