force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/fields/V_Vigente__c.field-meta.xml
<CustomField>
    <fullName>V_Vigente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sinaliza se o gerenciador é o que está em vigência.</description>
    <inlineHelpText>Sinaliza se o gerenciador é o que está em vigência.</inlineHelpText>
    <label>Vigente</label>
    <type>Checkbox</type>
</CustomField>