force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/validationRules/V_ValidarCriarAnoFiscal.validationRule-meta.xml
<ValidationRule>
    <fullName>V_ValidarCriarAnoFiscal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(V_CriarAnoFiscalParticipantes__c), V_CriarAnoFiscalParticipantes__c,  NOT(V_Vigente__c) )</errorConditionFormula>
    <errorMessage>O Gerenciador deve estar vigente para a criação das Metas</errorMessage>
</ValidationRule>