force-app/main/default/objects/VN_GerenciadorMetaParticipanteAF__c/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>V_AnoFiscal__c</columns>
    <columns>V_DataInicio__c</columns>
    <columns>V_DataFim__c</columns>
    <columns>V_PeriodoAF__c</columns>
    <columns>V_Vigente__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>